--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     Ghostbe Studio © 2023-2024
     <div class="social-icons">
         <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+        <a href="https://youtube.com/@ghostbestudio?si=9ExdXJlJYpS7BzdD" target="_blank"><i class="fab fa-youtube"></i></a>
         <a href="https://www.tiktok.com/@ghostbe.studio?_t=8q0kO2hEgQH&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a>
     </div>
 </footer>
